# segment_3d

./: README.md
segmentation_3d/: CMakeLists.txt  package.xml
segmentation_3d/config/: config.yaml
segmentation_3d/include/segmentation_3d/: point_processor.hpp  segmentation_processor.h
segmentation_3d/launch/: segment_3d.launch
segmentation_3d/scripts/: ultralytics_node.py
segmentation_3d/src/: point_processor.cpp  segmentation_processor.cpp
segmentation_msgs/: CMakeLists.txt  package.xml
segmentation_msgs/msg/: ObjectSegment.msg  ObjectsSegment.msg
